# ChangeLog for x11-proto/printproto
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/printproto/ChangeLog,v 1.35 2009/04/16 02:29:41 jer Exp $

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> printproto-1.0.4.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> printproto-1.0.4.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  printproto-1.0.4.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> printproto-1.0.4.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> printproto-1.0.4.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> printproto-1.0.4.ebuild:
  Marking printproto-1.0.4 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> printproto-1.0.4.ebuild:
  Marking printproto-1.0.4 ppc stable for bug 251832

*printproto-1.0.4 (10 Mar 2008)

  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +printproto-1.0.4.ebuild:
  Bump.

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  printproto-1.0.3.ebuild:
  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> printproto-1.0.3.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> printproto-1.0.3.ebuild:
  Mark 1.0.3 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  printproto-1.0.3.ebuild:
  arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  printproto-1.0.3.ebuild:
  ppc/sparc/mips/alpha stable

  30 Jun 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-printproto-1.0.3, Manifest:
  Fix digest.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  printproto-1.0.3.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> printproto-1.0.3.ebuild:
  Stable on ppc64
