@@ -1,7 +1,7 @@
 AUX printproto-1.0.4-winnt.patch 579 RMD160 d3c36160fdc78da745a599ea045c2068f9b9541a SHA1 7eb8aee25c084cadb390f8853372083eeba7c76c SHA256 77adfdae85149852270b3cf5e82d5bb5bc8ce8174eb3d068ced25ba96a986c8c
 DIST printproto-1.0.3.tar.bz2 43560 RMD160 af2312cd43efc2d2d26dd161a4ef667f2a928155 SHA1 c9b62c20ed50ce44c4835d5fd2d1bb52af66f75f SHA256 8b375f8cda83dfc7d84be44af41eedd484d0e2499acbd19bdca5b4056dec7235
 DIST printproto-1.0.4.tar.bz2 49579 RMD160 ab23d31e5b13fd7260f2a10d789f5d8e89bf775f SHA1 8da2d19faca74f894d0e2b3e142283b725c0ef46 SHA256 f059a93188e7143dbb6cc55e31ccf81b976776aa3023bfa57f47501fd1bfd3be
-EBUILD printproto-1.0.3.ebuild 492 RMD160 db7fcddab986753291a675025fbf0d9dc313db04 SHA1 bad4d59bed8b37cab9bd26267302845f4b911898 SHA256 40b31182938cf96812373ad842276832b784e59c9b29984a7a6ca11c0f5a21a8
-EBUILD printproto-1.0.4.ebuild 615 RMD160 c7d6421071d7c9f838d676e0bb1c4b324377e0ab SHA1 da41eeddd1cb75da976475fd2269572e94de4748 SHA256 60a198becc2da8dba7fedc2247e49b031fa088de1cb3ae4f9e2bf283e026836a
-MISC ChangeLog 4159 RMD160 1abcbcbaa93cdba35698cde1d825bdb6787110de SHA1 b0a31b0f74321dfd77ba2cc2673c640052d918d5 SHA256 5d90d7128104ce5211f5aee9e7e5867d185eb2b33575520ab3e3e8a4ba6a025b
+EBUILD printproto-1.0.3.ebuild 491 RMD160 39fef5e1d8838cc7f3bfbf6baedc7e3d9512f4fa SHA1 e17a120e4f65abcb4e0b7ec199af4b1056c6e0c1 SHA256 51d255a75cf09fd0d0fcfddb393014f9bc421669cbaf459d6ff02efbbae5adcc
+EBUILD printproto-1.0.4.ebuild 624 RMD160 ccb64e8ba9fec7972d587930ec145e1852c44680 SHA1 38ce2b63b15e45e4fe37026fac37b3e7eb34347f SHA256 ea3dbbe8eda6c80fb0e6042d190412b028a4edf4f80814f8474869695ff4b796
+MISC ChangeLog 4292 RMD160 a923606c248d8dc62fac58e199e49c66e4a7a50d SHA1 fa8078db05adf8e7d96ec8446c31c9ac7a504ba0 SHA256 5bf51e551ac13552cf620f3869dae3f2b1047b1b9a3d8b8a6213435f9dd9c9a3
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
