@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/printproto
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/printproto/ChangeLog,v 1.35 2009/04/16 02:29:41 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/printproto/ChangeLog,v 1.36 2009/05/05 15:16:06 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  printproto-1.0.3.ebuild, printproto-1.0.4.ebuild:
+  fix repoman warnings
 
   16 Apr 2009; Jeroen Roovers <jer@gentoo.org> printproto-1.0.4.ebuild:
   Stable for HPPA (bug #251832).
